<resources>
    <string name="app_name">Labsheet 01</string>
    <string name="lblSignUp">Sign Up</string>
    <string name="lblLogIn">Log In</string>
    <string name="topic">MobileX</string>
    <string name="hintUname">Enter username</string>
    <string name="hintPwd">Enter Password</string>
    <string name="loginStat">If you already have an account,</string>
    <string name="linkLogin">Log in</string>
    <string name="text01">Sign Up</string>
    <string name="text02">FOR THE NEXT GENERATION</string>
    <string name="successMsg">SUCCESSFULLY !</string>
    <string name="text03">TO ENTER THE FUTURE</string>
    <string name="loginHint01">Username</string>
    <string name="loginHint02">Password</string>
    <string name="signUpStat">If you don\'t have an account,</string>
    <string name="linkSignUp">Sign Up</string>
    <string name="text04">Welcome to</string>
    <string name="text05">THE NEW WORLD!</string>
    <string name="onboard01">ALL IN ONE PLACE</string>
    <string name="onboardText01">You can buy any king of smart phone under one roof</string>
    <string name="btnSkip">Skip</string>
    <string name="onboard02">FREE DELIVERY</string>
    <string name="onboardText02">You can get your smart phone without any charges to the front of you</string>
    <string name="onboard03">EASY PAY</string>
    <string name="onboardText03">You can do your payment with an easy manner via online</string>
    <string name="btnGetStarted">Get Started</string>
    <string name="homeText01">Welcome Back, Thisal</string>
    <string name="homeText02">GOOD EVENING!</string>
    <string name="homeText03">We are always engaging to give you</string>
    <string name="homeText04">valuable products</string>
    <string name="homeText05">PRE ORDER NOW!</string>
    <string name="homeText06">POPULAR DEALS</string>
    <string name="homeText07">Get Offer</string>
    <string name="homeText08">CONTACT US</string>
    <string name="homeText09">No. 517/1A Heenkenda Ragama</string>
    <string name="homeText10">0112 954789</string>
    <string name="homeText11">0714 548965</string>
    <string name="homeText12">Thank you for choosing us!</string>
    <string name="paymentText01">Pay with easy way!</string>
    <string name="paymentText02">Pay with Technology</string>
    <string name="paymentText03">You can do your payment via</string>
    <string name="paymentText04">Total Payable Amount</string>
    <string name="paymentText05">Rs. 0.00</string>
    <string name="paymentText06">Fill the below details to pay</string>
    <string name="paymentHint01">Name of the card</string>
    <string name="paymentHint02">Card Number</string>
    <string name="paymentHint03">Expiry Date (MM/YY)</string>
    <string name="paymentHint04">Security Code</string>
    <string name="paymentHint05">Postal Code</string>
    <string name="paymentText07">Pay</string>
    <string name="paymentText08">SPECIAL OFFERS</string>
    <string name="paymentText09">50% off for all models until 1st of April</string>
    <string name="paymentText10">Special data offer until 1st of April</string>
    <string name="paymentText11">Your payment is secured by us!</string>
    <string name="profileHeading">PROFILE</string>
    <string name="profileName">Thisal Vihanga</string>
    <string name="profileText01">USER INFO</string>
    <string name="btnEdit">Edit Profile</string>
    <string name="btnLogout">Log out</string>
    <string name="footerText">Copyright @2024 MobileX | All Right Reserved | Powered by BREngines</string>
    <string name="navHome">Home</string>
    <string name="navSearch">Search</string>
    <string name="navPayment">Payment</string>
    <string name="navProfile">Profile</string>
    <string name="searchHint">Search any smart phone</string>
    <string name="searchText01">OUR BRANDS</string>
    <string name="btnOrder">Order Now</string>
    <string name="storage01">4GB - 256GB</string>
    <string name="storage02">8GB - 256GB</string>
    <string name="storage03">4GB - 512GB</string>
    <string name="storage04">8GB - 512GB</string>
</resources>