<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainSignUp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="652dp"
        android:backgroundTint="@color/topic"
        android:text="@string/topic"
        android:textColor="@color/topic"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="336dp"
        android:layout_height="401dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/rec_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/link"
        android:layout_width="121dp"
        android:layout_height="44dp"
        android:layout_marginStart="65dp"
        android:background="@color/profileCard"
        android:text="@string/linkLogin"
        android:textColor="#0741D1"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.885" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblSignUp"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="292dp"
        android:layout_height="50dp"
        android:background="#BFFFFFFF"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/hintUname"
        android:inputType="text"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.284" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="291dp"
        android:layout_height="47dp"
        android:background="#BFFFFFFF"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/hintPwd"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.474" />

    <Button
        android:id="@+id/signup"
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btnSignUp"
        android:shadowRadius="12"
        android:text="@string/lblSignUp"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.685" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginStat"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.316"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.861" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="252dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text01"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text02"
            android:textColor="@color/btnSignUp"
            android:textSize="18sp"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>