<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="664dp"
        android:layout_height="601dp"
        android:alpha="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/png_logo"
        tools:layout_editor_absoluteY="-55dp"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="393dp"
        android:layout_height="527dp"
        android:layout_marginBottom="284dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="1dp"
        tools:ignore="MissingConstraints"
        android:gravity="center">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:fontFamily="@font/madimione_regular"
            android:gravity="center"
            android:text="@string/topic"
            android:textColor="@color/btnSignUp"
            android:textSize="60sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="CELLULAR"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="326dp"
        android:layout_height="296dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logo"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signUpStat"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btnSignUp"
            android:text="@string/lblSignUp"
            android:textSize="20sp"
            app:strokeColor="@color/btnLogIn"
            app:strokeWidth="1dp" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/loginStat"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="25dp"/>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btnLogIn"
            android:text="@string/lblLogIn"
            android:textSize="20sp"
            app:strokeColor="@color/white"
            app:strokeWidth="1dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>